# musikart

./: CMakeLists.txt  README.md  main.cpp
Bonus/: CMakeLists.txt  bonus.cpp  bonus.hpp
Circuit/: CMakeLists.txt  circuit.cpp  circuit.hpp
Fichier/: CMakeLists.txt  fichier.cpp  fichier.hpp
Interface/: CMakeLists.txt
Model3D/3D-bed/bed1/: bed1.mtl
Participants/: CMakeLists.txt  adversaireParticipant.cpp  adversaireParticipant.hpp  joueurParticipant.cpp  participant.cpp  participant.hpp
Voiture/: CMakeLists.txt  basseVoiture.cpp  basseVoiture.hpp  batterieVoiture.cpp  batterieVoiture.hpp  guitareVoiture.cpp  guitareVoiture.hpp  microVoiture.cpp  microVoiture.hpp  voiture.cpp  voiture.hpp
data/: cherry.mtl  circuit1.mtl  circuit2.mtl  franky.mtl  map.mtl  mapv1.mtl  mike.mtl  sid.mtl  skybox.mtl  skybox2.mtl
lib/: CMakeLists.txt
lib/include/: AssimpModel.hpp  Bot.hpp  Circuit.hpp  Environment.hpp  Freefly.hpp  GLDebugDrawer.hpp  Interface.hpp  Item.hpp  Kart.hpp  Matrix.hpp  Menu.hpp  Player.hpp  Point3D.hpp  Program.hpp  TrackballCamera.hpp  VAO.hpp  VAO.hpp~  VBO.hpp  common.hpp  hello.hpp
lib/src/: AssimpModel.cpp  Bot.cpp  Circuit.cpp  Environment.cpp  GLDebugDrawer.cpp  Interface.cpp  Item.cpp  Kart.cpp  Menu.cpp  Player.cpp  Point3D.cpp  Program.cpp  TrackballCamera.cpp  hello.cpp
shaders/: 3D.fs.glsl  3D.vs.glsl
test/: main.cpp
